# spotlight-win

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
spotlight_win/: __main__.py  cli.py  config.py  plugin_manager.py  spotlight.py
tests/: test_spotlight_win.py
